--- a/app.json
+++ b/app.json
@@ -3,5 +3,20 @@
   "description": "A simple php server to distribute capability tokens and route calls for your mobile app",
   "repository": "https://github.com/jconst/twilio-client-server",
   "logo": "https://www.twilio.com/packages/company/img/logos_downloadable_logobrand.png",
-  "keywords": ["twilio", "client", "mobile"]
+  "keywords": ["twilio", "client", "mobile"],
+  "env": {
+    "TWILIO_ACCOUNT_SID": {
+      "description": "Your Twilio account id",
+      "required": true
+    },
+    "TWILIO_AUTH_TOKEN": {
+      "description": "Your Twilio authentication token",
+      "required": true
+    },
+    "TWILIO_AUTH_TOKEN": {
+      "description": "The app sid for the TwiML app that will points to this server",
+      "required": true
+    }
+  },
+
 }
